@@ -1,0 +1,13 @@
+require 'spec_helper'
+
+describe Following do
+  before(:each) do
+    @valid_attributes = {
+      
+    }
+  end
+
+  it "should create a new instance given valid attributes" do
+    Following.create!(@valid_attributes)
+  end
+end
