@@ -5,6 +5,7 @@ Version 0.3.3
 ==========
   Peco Danajlovski <vortexmk@gmail.com>
   * Introduced ajax action for following users
+  * Cached and optimized user followings
 
 04.09.2010
 ==========
